--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,28 @@
 header {
-    background: lightblue;
-    padding:20px;
+  background: lightblue;
+  padding: 20px;
 }
 h1,
 h2 {
-  text-align:center;
+  text-align: center;
 }
 
 ul {
-    list-style: none;
-    display: flex;
+  list-style: none;
+  display: flex;
 }
 li {
-    margin-right:10px;
+  margin-right: 10px;
 }
 li a {
-    text-decoration: none;
+  text-decoration: none;
 }
 footer {
-    background-color: lightblue;
-    padding:20px;
+  background-color: lightblue;
+  padding: 20px;
+}
+article {
+  background-color: lightgray;
+  margin-block: 20px; 
+  padding: 20px;
 }
