--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,30 @@ article {
   margin-block: 20px; 
   padding: 20px;
 }
+
+section.articles {
+  display:block;
+}
+article {
+  //background:red;
+  border: 1px solid black;
+  border-radius:5px;
+  padding:10px;
+  margin:20px 150px;
+}
+.button {
+  background: rgb(240, 238, 238);
+  color:darkgreen;
+  text-align:center;
+  text-decoration:none;
+  border: 1px solid darkgreen;
+  padding:5px;
+  border-radius:5px;
+}
+a.new {
+  display:block;
+  position:sticky;
+  right:0;
+  top:100px;
+  width:75px;
+}
